# glbasics

./: CMakeLists.txt  Camera.cpp  Camera.h  Display.cpp  Display.h  GlobalState.cpp  GlobalState.h  Point.cpp  Point.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  glad.c  glad.h  glbasics.h  glinclude.h  init.cpp  init.h  keys.h  main.cpp  utils.cpp  utils.h
